# dinvk

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  rust-toochain.toml  taplo.toml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/1. dinvoke/: main.rs
examples/4. library_proxy/: main.rs
examples/5. syscall/: main.rs
examples/6. tampered_syscall/: main.rs
examples/dinvoke/: main.rs
examples/get_module_and_api/: main.rs
examples/get_module_and_function/: main.rs
examples/hash/: main.rs
examples/library_proxy/: main.rs
examples/syscall/: main.rs
examples/tampered_syscall/: main.rs
src/: allocator.rs  breakpoint.rs  functions.rs  hash.rs  lib.rs  macros.rs  panic.rs  parse.rs  str.rs  utils.rs  wrappers.rs
src/address/: mod.rs
src/data/: constant.rs  mod.rs  structs.rs  types.rs
src/module/: ldr.rs  mod.rs
src/syscall/: asm.rs  dll.rs  mod.rs
tests/: Cargo.toml
tests/src/: main.rs
