[package]
name = "dinvk"
version = "0.1.2"
edition = "2021"
description = "Dynamically invoke arbitrary code and use various tricks written idiomatically in Rust (Dinvoke)"
license = "MIT"
repository = "https://github.com/joaoviictorti/dinvk"
homepage = "https://github.com/joaoviictorti/dinvk"
readme = "README.md"
keywords = ["hacking", "dinvoke", "windows", "rust", "redteam"]
categories = ["os", "filesystem", "no-std"]
exclude = [
    ".gitignore",
    "target/",
    ".vscode/"
]

[dependencies]
bitflags = { version = "2.8.0", default-features = false }
cfg-if = "1.0.0"
obfstr = "0.4.4"

[features]
default = []
alloc = []
dinvk_panic = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc"
]
