[package]
name = "dinvk"
version = "0.2.3"
edition = "2024"
description = "Dynamically invoke arbitrary code and use various tricks written idiomatically in Rust (Dinvoke)"
license = "MIT"
repository = "https://github.com/joaoviictorti/dinvk"
homepage = "https://github.com/joaoviictorti/dinvk"
readme = "README.md"
keywords = ["hacking", "dinvoke", "windows", "rust", "redteam"]
categories = ["os", "security", "no-std"]
exclude = [
    ".gitignore",
    "target/",
    ".vscode/"
]

[dependencies]
bitflags = { version = "2.8.0", default-features = false }
cfg-if = "1.0.0"
obfstr = "0.4.4"
spin = "0.10.0"

[features]
default = []
alloc = []
dinvk_panic = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc"
]

[[example]]
name = "dinvoke"
path = "examples/1. dinvoke/main.rs"

[[example]]
name = "get_module_and_api"
path = "examples/2. get_module_and_api/main.rs"

[[example]]
name = "hash"
path = "examples/3. hash/main.rs"

[[example]]
name = "library_proxy"
path = "examples/4. library_proxy/main.rs"

[[example]]
name = "syscall"
path = "examples/5. syscall/main.rs"

[[example]]
name = "tampered_syscall"
path = "examples/6. tampered_syscall/main.rs"